# coding-agent-workshop-amsterdam-2026

./: .gitignore  README.md  main.py  pyproject.toml  workshop.ipynb
.ipynb_checkpoints/: part2-starter-checkpoint.ipynb  snake-checkpoint.html  untitled-checkpoint.txt
